[tool.poetry]
name = "repl_python3_Bot-1"
version = "0.1.0"
description = ""
authors = ["Robert L <diamondrel333@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord-py-slash-command = "^3.0.3"
discord = "^1.7.3"
"discord.py" = "^1.7.3"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
