[tool.poetry]
name = "repl_python3_Bot-1"
version = "0.1.0"
description = ""
authors = ["Robert L <diamondrel333@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
py-cord = "^2.0.0"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
